@@ -2635,7 +2635,6 @@ ptp_mtp_sendobjectproplist (PTPParams* params, uint32_t* store, uint32_t* parent
 {
 	uint16_t ret;
 	PTPContainer ptp;
-	int old_split_header_data;
 	unsigned char* opldata=NULL;
 	uint32_t oplsize;
 
@@ -2648,10 +2647,6 @@ ptp_mtp_sendobjectproplist (PTPParams* params, uint32_t* store, uint32_t* parent
 	ptp.Param5 = (uint32_t) (objectsize & 0xffffffffU);
 	ptp.Nparam = 5;
 
-	/* Temporary disable split headers */
-	old_split_header_data = params->split_header_data;
-	params->split_header_data = 0;
-	
 	/* Set object handle to 0 for a new object */
 	oplsize = ptp_pack_OPL(params,proplist,&opldata);
 	ret = ptp_transaction(params, &ptp, PTP_DP_SENDDATA, oplsize, &opldata, NULL); 
@@ -2659,9 +2654,6 @@ ptp_mtp_sendobjectproplist (PTPParams* params, uint32_t* store, uint32_t* parent
 	*store = ptp.Param1;
 	*parenthandle = ptp.Param2;
 	*handle = ptp.Param3; 
-
-	/* Restore split headers */
-	params->split_header_data = old_split_header_data;
 
 	return ret;
 }
